--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "mongodb": "^3.1.7"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.4"
   }
 }
